fix: time overflow issue

--- a/assets/styles/reset.css
+++ b/assets/styles/reset.css
@@ -147,6 +147,7 @@ table {
 html,
 body {
   min-height: 100%;
+  width: 100%;
   margin: 0;
 }
 
